--- a/btranalysis/css/styles.css
+++ b/btranalysis/css/styles.css
@@ -5,6 +5,7 @@ body {
     font-family: 'Raleway', sans-serif;
     font-family: 'Unbounded', sans-serif;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 .page {
     height: 100vh;
@@ -33,12 +34,52 @@ body {
     color: rgb(255, 255, 255);
     
 }
+
+
+.page3{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    font-size: 5rem;
+    color: rgb(255, 255, 255);
+    justify-content: right;
+    
+}
+.page4{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    font-size: 5rem;
+    color: rgb(255, 255, 255);
+    justify-content: center;
+    
+}
+.page6{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    font-size: 5rem;
+    color: rgb(255, 255, 255);
+    justify-content: right;
+    
+}
+
+.page7{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    font-size: 5rem;
+    background-color: black;
+    justify-content: right;
+    
+}
 #car img{
     position: absolute;
     height: 30%;
     width: auto;
     left:0;
 }
+
 .odometer{
     font-size: 170%;
     color: black;
@@ -64,6 +105,12 @@ body {
     font-family:Unbounded;
     left:90px;
 
+    text-shadow: 0.09em 0.05em #66A92F;/
+}
+.word p{
+    font-size: 35%;
+    color: black;
+    font-family:Unbounded;
     text-shadow: 0.09em 0.05em #66A92F;/
 }
 
@@ -102,4 +149,35 @@ body {
     padding:50px;
     font-family:Unbounded;
     text-shadow: 0.08em 0.05em #9b9797;
+    height:40dvh;
 }
+#bar3{
+    width: 60%; 
+    height: 80%; 
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+
+body{
+    background-color: black;
+  }
+  
+  .cd__main p{
+      padding: 20% 10%;
+      font-size: 200%;
+      font-family: arial;
+      color: #333333;
+  }
+  #retype{
+      color: #3333DD;
+      border-right: solid 0.1em #333377;
+  }
+  .word{
+    position: absolute;
+    top:150dvh;
+    right:0;
+    height:40dvh;  
+    text-align: right;
+width:90dvb}
